addons/opa-gatekeeper/privileged-container/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPrivilegedContainer
metadata:
  name: disable-privileged-containers
spec:
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - "Pod"
    excludedNamespaces:
      - "kube-system"
      - "rafay-infra"
      - "rafay-system"
